--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
+
       <!-- https://mvnrepository.com/artifact/junit/junit -->
       <dependency>
           <groupId>junit</groupId>
@@ -144,5 +145,10 @@
           <version>4.1</version>
           <scope>test</scope>
       </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+    </dependency>
   </dependencies>
 </project>
